--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,13 @@
+@charset "UTF-8";
 /* variables */
 :root {
   --white: #fff;
   --black: #000;
+  --light-grey: #e0e0e0;
   --blue: #024051;
   --light-yellow: #fdf4a1;
   --zian-green: #0d3023;
-  --beige: #fdfff5;
+  --beige: #f9ffe3;
   --grey-lemon-green: #a0bc9f;
 }
 
@@ -15,9 +17,8 @@ html {
 }
 
 body {
-  background-color: var(--black);
+  background-color: var(--white);
   font-size: 1rem;
-  background-color: var(--zian-green);
 }
 
 .container {
@@ -33,7 +34,13 @@ body {
 
 /* Fonts */
 header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   z-index: 99999;
+  background: transparent;
+  margin-top: 30px;
 }
 
 .nav {
@@ -55,13 +62,13 @@ header {
   transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
 }
 .nav__link {
-  color: var(--white);
+  color: var(--beige);
   display: block;
   padding: 10px 20px;
   line-height: 1;
   font-size: 15px;
   letter-spacing: 2px;
-  text-transform: lowercase;
+  text-transform: uppercase;
   transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
 }
 
@@ -100,32 +107,47 @@ header {
   border-color: rgba(255, 255, 255, 0.5);
 }
 
-/* Top-block */
+/* Top */
 .top {
-  background-color: var(--grey-lemon-green);
+  width: 100%;
+  height: 1200px; /* Фиксированная высота блока */
+  background: url(../img/bangkok-2.avif) no-repeat 0% 70%;
+  background-attachment: fixed;
+  padding-top: 100px;
 }
-
-.top-block {
+.top::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 1300px;
+  background: rgba(0, 0, 0, 0.5) no-repeat 0% 80%; /* Черный полупрозрачный слой */
+}
+.top__wrapper {
+  position: relative;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  position: relative;
 }
-.top-block__wrapper {
+.top__block {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 20px;
   min-height: 445px;
+  color: var(--beige);
+  padding: 180px 0;
 }
-.top-block__title {
+.top__title {
   font-size: 6.25rem;
 }
-.top-block__filters {
+.top__filters {
   filter: url(#threshold) blur(0.6px);
 }
-.top-block__text-top, .top-block__text-bottom {
+.top__text-top, .top__text-bottom {
   position: absolute;
   width: 100%;
   display: inline-block;
@@ -134,21 +156,16 @@ header {
      -moz-user-select: none;
           user-select: none;
 }
-.top-block__img {
-  display: block;
-}
 
 /* About */
 .about {
   padding-top: 80px;
   padding-bottom: 80px;
+}
+.about__wrapper {
   display: flex;
   align-items: center;
   gap: 30px;
-}
-.about__text-wrapper {
-  display: flex;
-  flex-direction: column;
 }
 .about__description {
   display: flex;
@@ -159,6 +176,30 @@ header {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+/* Scroll */
+.feature-grid {
+  display: grid;
+  place-content: center;
+  gap: 16px;
+  padding: 40px 50px;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+.feature-grid > .row {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: max(10vw, 15ch);
+  gap: 1rem;
+}
+
+.feature-grid > .row > .card {
+  aspect-ratio: 3/4;
+  background-color: var(--light-grey);
+  border-radius: 8px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 /* Situations */
@@ -220,4 +261,287 @@ header {
 }
 .situations__text-bottom {
   transform: translateX(1090px) translateY(-50px);
+}
+
+/* Statistics */
+.statistics__about {
+  display: grid;
+  grid-template-columns: repeat(3, 490px);
+  grid-template-rows: repeat(2, auto);
+  justify-content: center;
+  text-align: center;
+  gap: 50px;
+  padding: 0 250px;
+  margin-bottom: 30px;
+}
+.statistics__item {
+  max-width: 550px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: subgrid;
+  grid-row: span 2;
+  grid-template-areas: "number number number" "text-statistic text-statistic text-statistic";
+}
+.statistics__number {
+  grid-area: number;
+  position: relative;
+  font-size: 9.375rem;
+}
+.statistics__text-statistic {
+  grid-area: text-statistic;
+  font-size: 1.625rem;
+}
+
+/* Lessons, slider */
+.lessons__wrap {
+  border-top: 1px solid var(--white);
+}
+.lessons__title-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 25px;
+  margin-bottom: 30px;
+}
+.lessons__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  flex-grow: 1;
+}
+.lessons__review {
+  color: var(--white);
+  flex: 1;
+  font-size: 1.5rem;
+  padding: 20px;
+}
+.lessons__author {
+  color: var(--white);
+  font-size: 1rem;
+  font-style: italic;
+  text-align: right;
+  padding: 0 20px 10px 0;
+  align-self: flex-end;
+}
+.lessons__slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 350px;
+  max-width: 400px;
+  width: 100%;
+  min-height: 225px;
+  max-width: 500px;
+  height: 100%;
+  background: var(--transparent);
+  border: 1px solid var(--white);
+  border-radius: 30px;
+  margin: 0 16px;
+}
+.lessons__slide:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s;
+}
+.lessons__buttons {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 36px;
+  margin-top: 50px;
+}
+@media (min-width: 768px) {
+  .lessons__buttons {
+    margin-top: 56px;
+    margin-bottom: 56px;
+  }
+}
+.lessons__button {
+  color: black;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 8px;
+}
+@media (min-width: 1024px) {
+  .lessons__button {
+    padding: 16px;
+  }
+}
+.lessons__img {
+  max-width: 500px;
+}
+
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+  height: 100%;
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: "";
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+}
+
+[dir=rtl] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: flex;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+.slick-slide {
+  opacity: 0.5;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.slick-current {
+  opacity: 1;
+}
+
+.slick-list {
+  overflow: unset;
+  overflow-x: clip;
+}
+
+/* FAQ */
+.questions__wrap {
+  border-top: 1px solid var(--black);
+  padding-bottom: 70px;
+}
+.questions__title {
+  padding-bottom: 30px;
+}
+.questions__list {
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+.questions__item {
+  display: block;
+  list-style: none;
+  overflow: hidden;
+  border-top: 1px solid var(--black);
+}
+.questions__item:hover {
+  background: var(--black);
+}
+.questions__expand {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  text-decoration: none;
+  color: var(--white);
+  cursor: pointer;
+}
+.questions__question {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+.questions__answer {
+  display: none;
+  padding: 20px;
+  line-height: 22px;
+}
+.questions__text {
+  font-size: 1.25rem;
+  color: var(--black);
+}
+.questions__text_position {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.questions__arrow {
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+.questions__link {
+  text-decoration: none;
+  color: var(--zian-green);
+}
+.questions__link:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=styles.css.map */
