--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,16 +1,15 @@
-// @import url('https://fonts.googleapis.com/css?family=Raleway:900&display=swap');
-
 /* variables */
 
 :root {
     --white: #fff;
     --black: #000;
+    --light-grey: #e0e0e0;
 
     --blue: #024051;
     --light-yellow: #fdf4a1;
 
     --zian-green: #0d3023;
-    --beige: #fdfff5;
+    --beige: #f9ffe3;
     --grey-lemon-green: #a0bc9f;
 }
 
@@ -21,9 +20,9 @@ html {
 }
 
 body {
-    background-color: var(--black);
+    background-color: var(--white);
     font-size: 1rem;
-    background-color: var(--zian-green);
+    // background-color: var(--zian-green);
 }
 
 .container {
@@ -40,8 +39,13 @@ body {
 /* Fonts */
 
 header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     z-index: 99999;
-    // position: relative;
+    background: transparent;
+    margin-top: 30px;
 }
 
 .nav {
@@ -63,14 +67,13 @@ header {
     transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
 
     &__link {
-        color: var(--white);
-
+        color: var(--beige);
         display: block;
         padding: 10px 20px;
         line-height: 1;
         font-size: 15px;
         letter-spacing: 2px;
-        text-transform: lowercase;
+        text-transform: uppercase;
         transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1) 0.6s;
     }
 }
@@ -110,25 +113,42 @@ header {
     }
 }
 
-/* Top-block */
+/* Top */
 
 .top {
-    background-color: var(--grey-lemon-green);
-}
+    width: 100%;
+    height: 1200px; /* Фиксированная высота блока */
+    background: url(../img/bangkok-2.avif) no-repeat 0% 70%;
+    background-attachment: fixed;
+    padding-top: 100px;
 
-.top-block {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    position: relative;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0px;
+        left: 0;
+        width: 100%;
+        height: 1300px;
+        background: rgba(0, 0, 0, 0.5) no-repeat 0% 80%; /* Черный полупрозрачный слой */
+    }
 
     &__wrapper {
+        position: relative;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+    }
+
+    &__block {
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 20px;
         min-height: 445px;
+        color: var(--beige);
+        padding: 180px 0;
     }
 
     &__title {
@@ -147,10 +167,6 @@ header {
         font-size: 6.25rem;
         user-select: none;
     }
-
-    &__img {
-        display: block;
-    }
 }
 
 /* About */
@@ -159,13 +175,10 @@ header {
     padding-top: 80px;
     padding-bottom: 80px;
 
-    display: flex;
-    align-items: center;
-    gap: 30px;
-
-    &__text-wrapper {
+    &__wrapper {
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        gap: 30px;
     }
 
     &__description {
@@ -179,6 +192,31 @@ header {
         flex-direction: column;
         gap: 10px;
     }
+}
+
+/* Scroll */
+
+.feature-grid {
+    display: grid;
+    place-content: center;
+    gap: 16px;
+    padding: 40px 50px;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.feature-grid > .row {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: max(10vw, 15ch);
+    gap: 1rem;
+}
+
+.feature-grid > .row > .card {
+    aspect-ratio: 3 / 4;
+    background-color: var(--light-grey);
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 /* Situations */
@@ -265,5 +303,321 @@ header {
 
     &__text-bottom {
         transform: translateX(1090px) translateY(-50px);
+    }
+}
+
+/* Statistics */
+
+.statistics {
+    &__about {
+        display: grid;
+        grid-template-columns: repeat(3, 490px);
+        grid-template-rows: repeat(2, auto);
+        justify-content: center;
+        text-align: center;
+        gap: 50px;
+        padding: 0 250px;
+        margin-bottom: 30px;
+    }
+
+    &__item {
+        max-width: 550px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: subgrid;
+        grid-row: span 2;
+        grid-template-areas:
+            'number number number'
+            'text-statistic text-statistic text-statistic';
+    }
+
+    &__number {
+        grid-area: number;
+        position: relative;
+        font-size: 9.375rem;
+    }
+
+    &__text-statistic {
+        grid-area: text-statistic;
+        font-size: 1.625rem;
+    }
+}
+
+/* Lessons, slider */
+
+.lessons {
+    &__wrap {
+        border-top: 1px solid var(--white);
+    }
+
+    &__title-wrap {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 25px;
+        margin-bottom: 30px;
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        flex-grow: 1;
+    }
+
+    &__review {
+        color: var(--white);
+        flex: 1;
+        font-size: 1.5rem;
+        padding: 20px;
+    }
+
+    &__author {
+        color: var(--white);
+        font-size: 1rem;
+        font-style: italic;
+        text-align: right;
+        padding: 0 20px 10px 0;
+        align-self: flex-end;
+    }
+
+    &__slide {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-width: 350px;
+        max-width: 400px;
+        width: 100%;
+        min-height: 225px;
+        max-width: 500px;
+        height: 100%;
+        background: var(--transparent);
+        border: 1px solid var(--white);
+        border-radius: 30px;
+        margin: 0 16px;
+
+        &:hover {
+            transform: scale(1.05);
+            transition: transform 0.3s;
+        }
+    }
+
+    &__buttons {
+        display: flex;
+        justify-content: center;
+        gap: 8px;
+        margin-bottom: 36px;
+        margin-top: 50px;
+
+        @media (min-width: 768px) {
+            margin-top: 56px;
+            margin-bottom: 56px;
+        }
+    }
+
+    &__button {
+        color: black;
+        font-weight: bold;
+        border-radius: 10px;
+        cursor: pointer;
+        padding: 8px;
+
+        @media (min-width: 1024px) {
+            padding: 16px;
+        }
+    }
+
+    &__img {
+        max-width: 500px;
+    }
+}
+
+.slick-slider {
+    position: relative;
+
+    display: block;
+    box-sizing: border-box;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+    position: relative;
+
+    display: block;
+    overflow: hidden;
+
+    margin: 0;
+    padding: 0;
+}
+.slick-list:focus {
+    outline: none;
+}
+.slick-list.dragging {
+    cursor: pointer;
+    cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    height: 100%;
+}
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.slick-track:before,
+.slick-track:after {
+    display: table;
+
+    content: '';
+}
+.slick-track:after {
+    clear: both;
+}
+.slick-loading .slick-track {
+    visibility: hidden;
+}
+
+.slick-slide {
+    display: none;
+    float: left;
+}
+[dir='rtl'] .slick-slide {
+    float: right;
+}
+.slick-slide img {
+    display: block;
+}
+.slick-slide.slick-loading img {
+    display: none;
+}
+.slick-slide.dragging img {
+    pointer-events: none;
+}
+.slick-initialized .slick-slide {
+    display: flex;
+}
+.slick-loading .slick-slide {
+    visibility: hidden;
+}
+.slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent;
+}
+.slick-arrow.slick-hidden {
+    display: none;
+}
+
+.slick-slide {
+    opacity: 0.5;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.slick-current {
+    opacity: 1;
+}
+
+.slick-list {
+    overflow: unset;
+    overflow-x: clip;
+}
+
+/* FAQ */
+
+.questions {
+    &__wrap {
+        border-top: 1px solid var(--black);
+        padding-bottom: 70px;
+    }
+
+    &__title {
+        padding-bottom: 30px;
+    }
+
+    &__list {
+        margin: 20px 0 0 0;
+        padding: 0;
+    }
+
+    &__item {
+        display: block;
+        list-style: none;
+        overflow: hidden;
+        border-top: 1px solid var(--black);
+
+        &:hover {
+            background: var(--black);
+        }
+    }
+
+    &__expand {
+        display: flex;
+        justify-content: space-between;
+        padding: 15px;
+        text-decoration: none;
+        color: var(--white);
+        cursor: pointer;
+    }
+
+    &__question {
+        margin: 0;
+        padding: 0;
+        font-weight: 700;
+        font-size: 1.5rem;
+    }
+
+    &__answer {
+        display: none;
+        padding: 20px;
+        line-height: 22px;
+    }
+
+    &__text {
+        font-size: 1.25rem;
+        color: var(--black);
+
+        &_position {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+    }
+
+    &__arrow {
+        font-weight: 700;
+        font-size: 1.25rem;
+    }
+
+    &__link {
+        text-decoration: none;
+        color: var(--zian-green);
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
