added new sections, changed styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,22 @@
 /* variables */
 :root {
   --white: #fff;
-  --black: #000;
-  --light-grey: #e0e0e0;
+  --dark-grey: #3c4048;
   --grey: #eaebed;
+  --light-grey: #e0e0e0;
   --main-light: #fdfff5;
   --blue: #024051;
   --sky: #e2f3ff;
   --light-yellow: #fdf4a1;
   --light-green: #f1fbeb;
   --zian-green: #0d3023;
-  --beige: #f9ffe3;
   --grey-lemon-green: #a0bc9f;
-  --mint: #daf4db;
+  --beige: #fffaec;
+  --mint: #e8ffe9;
   --main-font: "Montserrat", "Arial", sans-serif;
   --second-font: "Cinzel", "Arial", sans-serif;
-  --block-margin: 100px 0;
+  --block-padding: 100px 0;
+  --padding: 0 0 100px 0;
 }
 
 /* Global */
@@ -24,10 +25,12 @@ html {
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--beige);
   font-family: var(--main-font);
   font-weight: 400;
   font-size: 1rem;
+  color: var(--dark-grey);
+  line-height: 1.2;
 }
 
 .container {
@@ -46,7 +49,7 @@ body {
   font-weight: 500;
   font-size: 2.75rem;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 /* Fonts */
@@ -268,7 +271,8 @@ header {
 
 /* About */
 .about {
-  margin: var(--block-margin);
+  background-color: var(--white);
+  padding: var(--block-padding);
 }
 .about__wrapper {
   display: flex;
@@ -310,17 +314,58 @@ header {
   max-width: 700px;
 }
 
-/* Scroll */
 /* Adventure */
 .adventure {
-  margin: var(--block-margin);
+  padding: var(--block-padding);
 }
-.adventure__text-top {
+.adventure__block-wrap {
+  position: relative;
   font-size: 1.375rem;
   line-height: 1.5;
   display: flex;
   flex-direction: column;
   gap: 50px;
+  z-index: 50;
+}
+.adventure__block-wrap:not(:last-child) {
+  margin-bottom: 50px;
+}
+.adventure__block-wrap:first-of-type::before {
+  content: "";
+  position: absolute;
+  top: 112px;
+  left: -260px;
+  background: url(../img/airplane-2.png) no-repeat;
+  background-size: 360px auto;
+  width: 360px;
+  height: 360px;
+  opacity: 0.3;
+  rotate: 10deg;
+  z-index: -1;
+}
+.adventure__block-wrap:first-of-type::after {
+  content: "";
+  position: absolute;
+  bottom: 82px;
+  right: 40px;
+  background: url("../img/adventure-awaits.png") no-repeat;
+  background-size: 200px auto;
+  width: 200px;
+  height: 200px;
+  opacity: 0.3;
+  z-index: -1;
+}
+.adventure__block-wrap:last-of-type::after {
+  content: "";
+  position: absolute;
+  bottom: 32px;
+  left: -340px;
+  background: url("../img/airplane.png") no-repeat;
+  background-size: 500px auto;
+  width: 500px;
+  height: 500px;
+  opacity: 0.3;
+  z-index: -1;
 }
 .adventure__text-list {
   display: grid;
@@ -328,6 +373,9 @@ header {
   justify-items: center;
   align-items: center;
   gap: 20px;
+}
+.adventure__text {
+  font-size: 1.75rem;
 }
 .adventure__text-item, .adventure__wrap {
   width: 200px;
@@ -349,93 +397,91 @@ header {
   transform: scale(1.15);
 }
 
-.feature-grid {
+/* Animation scroll*/
+.animation__feature-grid {
   display: grid;
   place-content: center;
   gap: 16px;
-  padding: 40px 50px;
-  max-width: 100vw;
   overflow: hidden;
 }
-
-.feature-grid > .row {
+.animation__row {
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: max(10vw, 15ch);
-  gap: 1rem;
+  grid-auto-columns: max(10vw, 20ch);
+  gap: 16px;
 }
-
-.feature-grid > .row > .card {
-  aspect-ratio: 3/4;
+.animation__card {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1080/1020;
   background-color: var(--light-grey);
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+.animation__img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
 
 /* Situations */
-@property --gradient-angle {
-  syntax: "<angle>";
-  initial-value: 0turn;
-  inherits: false;
+.situations__section {
+  max-width: 1840px;
+  border-radius: 50px;
+  background-color: var(--grey-lemon-green);
+  padding: var(--block-padding);
+  margin: 0 auto;
 }
-.situations__blocks {
+.situations__wrapper {
+  position: relative;
+  z-index: 50;
+}
+.situations__block-wrap {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  gap: 60px;
+}
+.situations__blocks {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  width: 100%;
 }
 .situations__card {
   position: relative;
-  animation: 2s gradient-angle infinite linear;
-  border: 2px solid transparent;
-  background-image: linear-gradient(#584827, #2d230f), conic-gradient(from var(--gradient-angle), #584827 0%, #c7a03c 37%, #f9de90 30%, #c7a03c 33%, #584827 40%, #584827 50%, #c7a03c 77%, #f9de90 80%, #c7a03c 83%, #584827 90%);
-  background-clip: padding-box, border-box;
-  background-origin: padding-box, border-box;
-  display: grid;
-  color: currentColor;
+  display: flex;
+  justify-content: center;
+  font-size: 1.625rem;
+  color: var(--dark-grey);
+  background-color: var(--beige);
   border-radius: 20px;
-  place-content: center;
-  place-items: center;
-  aspect-ratio: 1/1;
-  row-gap: 16px;
-  padding: 20px;
-  max-width: 240px;
-  transition: all 0.3s ease-in-out;
+  box-shadow: -2px 5px 15px 0px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease;
+  cursor: default;
+  padding: 46px;
 }
-.situations__card:nth-child(1) {
-  width: 220px;
-  transform: translateX(250px) translateY(0);
-}
-.situations__card:nth-child(2) {
-  width: 240px;
-  transform: translateX(500px) translateY(-15px);
-}
-.situations__card:nth-child(3) {
-  width: 260px;
-  transform: translateX(760px) translateY(-30px);
-}
-@keyframes gradient-angle {
-  to {
-    --gradient-angle: 1turn;
-  }
+.situations__card:hover {
+  transform: scale(1.05);
 }
 .situations__text-top, .situations__text-bottom {
-  max-width: 300px;
+  max-width: 352px;
   font-size: 2rem;
-  background-color: var(--white);
-  border: 1px solid var(--black);
-  padding: 25px;
-  transition: all 0.3s ease-in-out;
-}
-.situations__text-top {
-  transform: translateX(0) translateY(20px);
+  color: var(--beige);
+  background-color: var(--zian-green);
+  border-radius: 30px;
+  box-shadow: -2px 5px 15px 0px rgba(0, 0, 0, 0.5);
+  padding: 50px;
 }
 .situations__text-bottom {
-  transform: translateX(1090px) translateY(-50px);
+  align-self: flex-end;
+  width: 100%;
+  max-width: 468px;
 }
 
 /* Statistics */
 .statistics {
-  margin: var(--block-margin);
+  background-color: var(--white);
+  padding: var(--padding);
 }
 .statistics__about {
   display: grid;
@@ -463,37 +509,235 @@ header {
   font-size: 1.625rem;
 }
 
-/* Lessons, slider */
-.lessons__wrap {
-  border-top: 1px solid var(--white);
+/* Choose */
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+.choose {
+  display: grid;
+  max-inline-size: 100%;
+  min-block-size: 100svb;
+  overflow-x: clip;
+  padding-block: 80px;
+  place-items: center;
+}
+.choose__wrapper {
+  display: grid;
+  place-items: center;
+}
+.choose__central-block {
+  display: grid;
+  place-items: center;
+  gap: 16px;
+  z-index: 2;
+}
+@media (width >= 1024px) {
+  .choose__central-block {
+    grid-area: 1/1;
+  }
+}
+.choose__title {
+  text-align: center;
+}
+.choose__hgroup {
+  display: grid;
+  place-items: center;
+  gap: 8px;
+}
+.choose__cards {
+  list-style: none;
+  padding: 0;
+  /* lg-n-below */
+}
+@media (width < 1024px) {
+  .choose__cards {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 32px;
+    max-inline-size: 100%;
+    overflow-x: scroll;
+    padding-block: 32px;
+    padding-inline: 32px;
+  }
+}
+@media (width >= 1024px) {
+  .choose__cards {
+    --avatar-opacity: 1;
+    --avatar-img-scale: 1;
+    --tooltip-visibility: hidden;
+    --tooltip-opacity: 0;
+    --animation-state: running;
+    display: grid;
+    grid-area: 1/1;
+    min-block-size: 700px;
+    place-items: center;
+  }
+  .choose__cards:has(.choose__avatar-link-wrapper:is(:hover, :focus-visible, :active)) {
+    --animation-state: paused;
+    --avatar-opacity: 0.4;
+  }
+}
+.choose__card {
+  padding: 0;
+}
+@media (width >= 1024px) {
+  .choose__card {
+    --radius: min(700px, 40cqi);
+    --offset-per-child: calc(360deg / (var(--nth-siblings) + 1));
+    --angle-offset: calc(var(--nth-child) * var(--offset-per-child));
+    --inline-ratio: 1/1;
+    --block-ratio: 3 / 4;
+    --direction: min(max(calc(cos((var(--angle) + var(--angle-offset))) * -100), -1), 1);
+    grid-area: 1/1;
+    translate: calc(cos(var(--angle) + var(--angle-offset)) * var(--radius) * var(--inline-ratio)) calc(sin(var(--angle) + var(--angle-offset)) * var(--radius) * var(--block-ratio) * -1);
+    animation: adjust-angle linear 40s infinite reverse var(--animation-state);
+  }
+}
+.choose__avatar-link-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: var(--text-1);
+}
+.choose__avatar-link-wrapper:is(:hover, :focus-visible, :active) {
+  --avatar-img-scale: 1.1;
+  --avatar-opacity: 1;
+  --tooltip-opacity: 1;
+  --tooltip-visibility: visible;
+}
+@media (width < 1024px) {
+  .choose__avatar-link-wrapper {
+    flex-direction: column;
+    gap: 16px;
+  }
+}
+.choose__visual {
+  aspect-ratio: 1;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px 0 oklch(0 0 0/10%);
+  max-width: 144px;
+  width: 100%;
+  opacity: var(--avatar-opacity);
+  overflow: clip;
+  transition: opacity 0.3s ease;
+}
+@media (width >= 1024px) {
+  .choose__visual {
+    max-width: 250px;
+  }
+}
+.choose__avatar-img {
+  background-color: var(--surface-2);
+  block-size: 100%;
+  display: block;
+  inline-size: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  scale: var(--avatar-img-scale, 1);
+  transition: scale 0.3s ease;
+}
+.choose__tooltiptext {
+  display: grid;
+  gap: 4px;
+}
+@media (width >= 1024px) {
+  .choose__tooltiptext {
+    position: absolute;
+    font-size: 1.25rem;
+    opacity: var(--tooltip-opacity);
+    transition-duration: 0.3s;
+    transition-property: opacity, visibility;
+    transition-timing-function: ease;
+    translate: 110% 0;
+    visibility: var(--tooltip-visibility);
+    pointer-events: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
+  }
+  @container style(--direction: -1) {
+    .choose__tooltiptext {
+      text-align: end;
+      translate: -110% 0;
+    }
+  }
+}
+@keyframes adjust-angle {
+  to {
+    --angle: 360deg;
+  }
+}
+
+/* Lessons */
+.lessons {
+  padding: var(--block-padding);
+}
+.lessons__top-blocks {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 20px;
+}
+.lessons__top-block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.lessons__item {
+  font-size: 1.75rem;
+  line-height: 1.5;
 }
 .lessons__title-wrap {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
+}
+.lessons__main-img {
+  display: block;
+  max-width: 800px;
+  width: 100%;
+  height: auto;
+  border-radius: 30px;
+  box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.5);
 }
 .lessons__content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  min-height: 450px;
   height: 100%;
   flex-grow: 1;
-}
-.lessons__review {
-  color: var(--white);
-  flex: 1;
-  font-size: 1.5rem;
   padding: 20px;
 }
-.lessons__author {
-  color: var(--white);
-  font-size: 1rem;
-  font-style: italic;
-  text-align: right;
-  padding: 0 20px 10px 0;
-  align-self: flex-end;
+.lessons__bottom-text {
+  color: var(--dark-grey);
+  font-size: 1.5rem;
+}
+.lessons__wrap-img {
+  margin-bottom: 30px;
+}
+.lessons__img {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+.lessons__title-lesson {
+  font-size: 1.5rem;
+  text-align: center;
+  color: var(--dark-grey);
+  margin-bottom: 10px;
+}
+.lessons__description {
+  font-size: 1.25rem;
+  text-align: center;
+  color: var(--dark-grey);
+}
+.lessons__slider {
+  background-color: var(--grey-lemon-green);
+  padding: 50px 0;
 }
 .lessons__slide {
   display: flex;
@@ -506,9 +750,9 @@ header {
   min-height: 225px;
   max-width: 500px;
   height: 100%;
-  background: var(--transparent);
-  border: 1px solid var(--white);
+  background-color: var(--beige);
   border-radius: 30px;
+  box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.5);
   margin: 0 16px;
 }
 .lessons__slide:hover {
@@ -519,18 +763,14 @@ header {
   display: flex;
   justify-content: center;
   gap: 8px;
-  margin-bottom: 36px;
-  margin-top: 50px;
-}
-@media (min-width: 768px) {
-  .lessons__buttons {
-    margin-top: 56px;
-    margin-bottom: 56px;
-  }
+  margin-top: 16px;
 }
 .lessons__button {
-  color: black;
+  background-color: var(--zian-green);
+  color: var(--beige);
   font-weight: bold;
+  border: none;
+  outline: none;
   border-radius: 10px;
   cursor: pointer;
   padding: 8px;
@@ -657,33 +897,36 @@ header {
 }
 
 /* FAQ */
-.questions__wrap {
-  border-top: 1px solid var(--black);
-  padding-bottom: 70px;
+.questions {
+  background-color: var(--white);
+  padding: var(--block-padding);
 }
 .questions__title {
   padding-bottom: 30px;
 }
 .questions__list {
-  margin: 20px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  color: var(--beige);
   padding: 0;
+  margin: 20px 0 0 0;
 }
 .questions__item {
   display: block;
   list-style: none;
   overflow: hidden;
-  border-top: 1px solid var(--black);
-}
-.questions__item:hover {
-  background: var(--black);
+  border-radius: 30px;
+  border-top: 1px solid var(--dark-grey);
+  box-shadow: 1px 1px 11px 0px rgba(0, 0, 0, 0.5);
 }
 .questions__expand {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  background-color: var(--zian-green);
   text-decoration: none;
-  color: var(--white);
   cursor: pointer;
+  padding: 15px;
 }
 .questions__question {
   margin: 0;
@@ -692,13 +935,15 @@ header {
   font-size: 1.5rem;
 }
 .questions__answer {
+  background-color: var(--grey-lemon-green);
+  color: var(--dark-grey);
   display: none;
-  padding: 20px;
   line-height: 22px;
+  padding: 20px;
 }
 .questions__text {
   font-size: 1.25rem;
-  color: var(--black);
+  color: var(--dark-grey);
 }
 .questions__text_position {
   display: flex;
@@ -707,7 +952,8 @@ header {
 }
 .questions__arrow {
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  align-content: center;
 }
 .questions__link {
   text-decoration: none;
